--- a/manifest.yml
+++ b/manifest.yml
@@ -3,12 +3,5 @@ applications:
 - name: petclinic
   memory: 512M
   instances: 1
-  subdomain: petclinic-${random-word}
-  domain: cfapps.io
-  path: target/pets4u-0.1.war
   services:
-    petclinic-mysql:
-      label: cleardb
-      provider: cleardb
-      version: n/a
-      plan: spark
+  - petclinic-mysql
